# serializer version: 1
# name: test_full_script_golden[committee_profile-committee][committee]
  '''
  An audiobook rendering of A Tiny Synthetic Thesis, by Test Author.
  
  <break time="0.8s"/>
  
  Chapter one. Introduction.
  
  <break time="0.8s"/>
  
  We measured stomatal conductance and C O two at p less than zero point zero five Smith and Roe twenty nineteen. As shown in Figure one, slac one reduced stomatal conductance by zero point three to zero point five.
  
  Figure one. Panel A stomatal conductance over time. Panel B C O two response.
  
  abscisic acid signaling via the P Y R, P P two C, O S T one, slac one module shaped xylem water potential during drought Jones twenty twenty; Lee and others twenty twenty-one.
  
  Chapter two. Results.
  
  <break time="0.8s"/>
  
  In cotton, stomatal conductance over outside-xylem conductance remained small but reactive oxygen species increased by thirty-seven percent Bacheva and Mencuccini twenty twenty-three.
  
  Section two point one, Gas exchange.
  
  <break time="0.8s"/>
  
  The osca one mutant showed n equals six replicates with five point two plus or minus zero point three response.
  
  Table one. a mock gloss for input dbadbedc
  
  Equation one. a mock gloss for input bafcbaed
  
  This concludes A Tiny Synthetic Thesis.
  '''
# ---
# name: test_full_script_golden[general_profile-general][general]
  '''
  An audiobook rendering of A Tiny Synthetic Thesis, by Test Author.
  
  <break time="0.8s"/>
  
  Chapter one. Introduction.
  
  <break time="0.8s"/>
  
  We measured stomatal conductance and C O two at p less than zero point zero five. As shown in Figure one, slac one reduced stomatal conductance by zero point three to zero point five.
  
  Figure one. Panel A stomatal conductance over time. Panel B C O two response.
  
  abscisic acid signaling via the P Y R, P P two C, O S T one, slac one module shaped xylem water potential during drought.
  
  Chapter two. Results.
  
  <break time="0.8s"/>
  
  In cotton, stomatal conductance over outside-xylem conductance remained small but reactive oxygen species increased by thirty-seven percent.
  
  Section two point one, Gas exchange.
  
  <break time="0.8s"/>
  
  The osca one mutant showed n equals six replicates with five point two plus or minus zero point three response.
  
  Table one is omitted from the audio.
  
  Equation one is shown in the text here.
  
  This concludes A Tiny Synthetic Thesis.
  '''
# ---
